--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,8 @@
     "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "minimatch": "^3.0.4",
-    "runtypes": "^3.1.2"
+    "runtypes": "^3.1.2",
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@types/camelcase": "^4.1.0",
