--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo-lint/docs",
+  "name": "@monorepolint/docs",
   "version": "0.1.6",
   "author": "Mac Lockard",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
@@ -25,6 +25,7 @@
     "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-prismjs": "^3.1.4",
     "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-documentationjs": "^2.0.2",
     "gatsby-transformer-remark": "^2.1.17",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
