--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -1,26 +1,13 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "lib": [
-      "es2015"
-    ],
-    "noEmit": true,
-    "declaration": false,
-    "declarationMap": false,
-    "sourceMap": false,
-    "outDir": "./build",
+    "outDir": "./lib",
     "rootDir": "./src",
-    "jsx": "react",
-    "composite": true,
-    "importHelpers": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "skipLibCheck": true
   },
-  "references": []
+  "references": [
+    {
+      "path": "../rules"
+    }
+  ]
 }
