--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,13 +14,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
-    "@monorepolint/core": "^0.2.1",
-    "@monorepolint/rules": "^0.2.1",
-    "decamelize": "^2.0.0",
     "gatsby": "^2.0.72",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-plugin-typography": "^2.2.2",
     "gatsby-remark-autolink-headers": "^2.0.12",
@@ -28,6 +26,7 @@
     "gatsby-remark-prismjs": "^3.1.4",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-remark": "^2.1.17",
+    "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -38,7 +37,6 @@
     "typography-theme-github": "^0.16.18"
   },
   "devDependencies": {
-    "@types/decamelize": "^1.2.0",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.7",
