--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,4 @@
 {
-  "bin": {
-    "monorepolint": "./bin/monorepolint",
-    "mrl": "./bin/mrl"
-  },
   "name": "@monorepolint/cli",
   "version": "0.2.1",
   "author": "Eric L Anderson (https://github.com/ericanderson)",
@@ -34,5 +30,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "74320e31cfce7555aece7a98d71d01d2f329be0f"
+  "gitHead": "74320e31cfce7555aece7a98d71d01d2f329be0f",
+  "bin": {
+    "monorepolint": "./bin/monorepolint",
+    "mrl": "./bin/mrl"
+  }
 }
