--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@types/jest": "^24.0.0",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^11.9.0",
+    "gh-pages": "^2.0.1",
+    "gitbook": "^2.6.9",
+    "gitbook-cli": "^2.3.2",
     "husky": "^1.2.1",
     "jest": "^23.6.0",
     "lerna": "^3.6.0",
