--- a/package.json
+++ b/package.json
@@ -52,11 +52,8 @@
     "prettier": "^2.8.0",
     "semver": "^7.3.2",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "turbo": "^1.6.3",
-    "typescript": "^4.9.3",
-    "@swc/core": "^1.3.21",
-    "@swc/jest": "^0.2.23"
+    "typescript": "^4.9.3"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
