--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
     "find-packages": "^10.0.4",
     "find-up": "^6.3.0",
     "glob": "^8.0.3",
-    "minimatch": "^5.1.1",
+    "micromatch": "^4.0.5",
     "read-yaml-file": "^2.1.0",
     "tslib": "^2.3.1"
   },
@@ -36,7 +36,7 @@
     "@jest/globals": "^29.3.1",
     "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.4",
-    "@types/minimatch": "^5.1.2",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
