--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,12 @@
 {
     "printWidth": 120,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "printWidth": 40
+            }
+        }
+    ]
 }
