--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,12 +12,15 @@
     "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
-    "@mdx-js/react": "^1.6.22",
+    "@algolia/client-search": "^4.14.2",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/utils": "2.2.0",
+    "@docusaurus/utils-common": "2.2.0",
+    "@mdx-js/react": "^1.0.0",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
@@ -26,10 +29,11 @@
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
     "jest": "^29.3.1",
-    "prettier": "^2.8.0",
-    "ts-jest": "^29.0.3",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3"
+    "prettier": "^2.8.3",
+    "prism-react-renderer": "^1.3.5",
+    "ts-jest": "^29.0.5",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
