--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
+    "target": "es2022",
     "module": "Node16",
-    "lib": ["ES2021"],
+    "lib": ["ES2023"],
     "moduleResolution": "Node16",
     "declaration": true,
     "declarationMap": true,
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true, // some dep is killing us here. This used to be false :(
     "emitDeclarationOnly": true,
+    "forceConsistentCasingInFileNames": true,
     "allowJs": true, // we leverage this for transpiling during jest :(
     "types": ["node"]
   },
