--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,19 +36,19 @@
     "@monorepolint/config": "^0.4.0",
     "@monorepolint/core": "^0.4.0",
     "@monorepolint/utils": "^0.4.0",
-    "chalk": "^5.1.2",
-    "tslib": "2.3.1",
-    "yargs": "^17.6.2"
+    "chalk": "^5.3.0",
+    "tslib": "^2.6.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@jest/globals": "^29.3.1",
-    "@types/jest": "^29.2.4",
-    "@types/yargs": "17.0.10",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.5",
+    "@types/yargs": "17.0.25",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.49.0",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
     "tsup": "^7.2.0",
