--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,27 +26,27 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.20.0",
-    "@docusaurus/core": "3.0.0-beta.0",
-    "@docusaurus/preset-classic": "3.0.0-beta.0",
-    "@docusaurus/utils": "3.0.0-beta.0",
-    "@docusaurus/utils-common": "3.0.0-beta.0",
-    "@mdx-js/react": "^2.0.0",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
+    "@docusaurus/utils": "3.0.0",
+    "@docusaurus/utils-common": "3.0.0",
+    "@mdx-js/react": "^3.0.0",
     "classnames": "^2.3.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.49.0",
+    "@types/jest": "^29.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "prettier": "^3.0.3",
-    "prism-react-renderer": "^2.0.0",
+    "prettier": "^3.1.0",
+    "prism-react-renderer": "^2.3.0",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "browserslist": {
     "production": [
