--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,7 +24,7 @@ jobs:
 
     - uses: pnpm/action-setup@v2.4.0
       with:
-        version: latest-6
+        version: 8
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
