--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "fsevents": "^2.1.3"
   },
   "engines": {
-    "node": ">=16"
-  }
+    "node": ">=16",
+    "engines": ">=8"
+  },
+  "packageManager": "pnpm@8"
 }
