--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,7 +25,7 @@ jobs:
       - run: pnpm install
 
       - name: Build website
-        run: pnpm build-docs --filter @monorepolint/docs
+        run: pnpm --filter @monorepolint/docs build-docs 
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
