--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
     - uses: pnpm/action-setup@v2.4.0
       with:
-        version: latest-6
+        version: 8
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
