--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,28 +25,28 @@
     "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.20.0",
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
-    "@docusaurus/utils": "3.0.0",
-    "@docusaurus/utils-common": "3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "classnames": "^2.3.2",
+    "@algolia/client-search": "^4.23.3",
+    "@docusaurus/core": "^3.2.1",
+    "@docusaurus/preset-classic": "^3.2.1",
+    "@docusaurus/utils": "^3.2.1",
+    "@docusaurus/utils-common": "^3.2.1",
+    "@mdx-js/react": "^3.0.1",
+    "classnames": "^2.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "prettier": "^3.1.0",
-    "prism-react-renderer": "^2.3.0",
-    "ts-jest": "^29.1.1",
+    "prettier": "^3.2.5",
+    "prism-react-renderer": "^2.3.1",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.4.5"
   },
   "browserslist": {
     "production": [
